--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite --port 3000",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "prettier": "prettier --write ."
+    "prettier": "prettier --write .",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx ./src"
   },
   "dependencies": {
     "html2canvas": "^1.4.1",
