--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "lint": "eslint --ext .js,.jsx,.ts,.tsx ./src"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
     "html2canvas": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "uuid": "^9.0.0",
     "zod": "^3.20.2"
   },
