--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview",
     "prettier": "prettier --write .",
     "prettier:check": "prettier --check .",
-    "lint": "eslint --ext .js,.jsx,.ts,.tsx ./src"
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx ./src",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
@@ -23,6 +25,15 @@
     "zod": "^3.20.2"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "7.5.1",
+    "@storybook/addon-interactions": "7.5.1",
+    "@storybook/addon-links": "7.5.1",
+    "@storybook/addon-onboarding": "1.0.8",
+    "@storybook/addon-themes": "7.5.1",
+    "@storybook/blocks": "7.5.1",
+    "@storybook/react": "7.5.1",
+    "@storybook/react-vite": "7.5.1",
+    "@storybook/testing-library": "0.2.2",
     "@types/file-saver": "^2.0.5",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
@@ -36,8 +47,10 @@
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-storybook": "^0.6.15",
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
+    "storybook": "7.5.1",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
